# kubectl-ports-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build-release.yaml  cache.yml  main.yml  pr-build.yaml  release.yml
src/: display.rs  extractor.rs  main.rs  opts.rs  schemas.rs  utils.rs
src/k8s/: errors.rs  mod.rs  pods.rs  service.rs
