[package]
name = "kubectl-ports"
edition = "2021"
version = "1.1.0"
authors = ["widnyana <wid@widnyana.web.id>"]
description = "A kubectl plugin to provide a list of exposed ports on kubernetes Pod resources"
homepage = "https://github.com/widnyana/kubectl-ports-rs"
readme = "README.md"
keywords = ["kubernetes", "kubernetes-ports", "krew-plugin"]
categories = ["development-tools", "visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/widnyana/kubectl-ports-rs"
exclude = [".github/*", ".vscode/*", "target", "bin"]


[dependencies]
anyhow = "1.0.100"
http = "1.3.1"
prettytable-rs = "0.10.0"
schemars = "1.0.4"
thiserror = "1.0.69"
tracing = "0.1.41"

[dependencies.clap]
version = "4.5.48"
features = ["cargo", "suggestions", "usage", "std", "error-context", "derive", "color", "wrap_help"]
optional = false
default-features = false

[dependencies.k8s-openapi]
version = "0.26.0"
features = ["v1_30"]
optional = false

[dependencies.kube]
version = "2.0.1"
features = ["client", "oauth", "gzip", "openssl-tls", "runtime", "derive", "http-proxy"]
optional = false
default-features = true

[dependencies.openssl]
version = "0.10.73"
features = ["vendored"]
optional = false

[dependencies.tokio]
version = "1.47.1"
features = ["full"]
optional = false

[dependencies.tracing-bunyan-formatter]
version = "0.3.10"
features = []
optional = false

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]
optional = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
panic = "abort"
strip = true

[profile.release.package]

[profile.dev]
opt-level = 1
incremental = true
overflow-checks = false

[profile.dev.package]

[[bin]]
path = "src/main.rs"
name = "kubectl-ports"
bench = false
doc = false
proc-macro = false
required-features = []
